Initial Second Commit

--- a/index.htm
+++ b/index.htm
@@ -151,7 +151,7 @@
         <p><b>Status:</b>  Pursuing. <br>
             Savitribai Phule Pune University. <br>
             <b>College:</b> Sanjivani College of Engineering Koparagaon, Ahamadnagar. <br>
-            <b>Percentage:</b>   <br>
+            <b>CGPA:</b> 8.55 <br>
         </p>
     </div>
 
